--- a/src/main/resources/styles/style.css
+++ b/src/main/resources/styles/style.css
@@ -164,3 +164,23 @@ body {
   text-align: center;
   padding: 2px;
 }
+
+#modal-detalhes-pagamento {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+#detalhes-pagamento-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  text-align: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
